--- a/RealmX Engine/RealmX Engine.vcxproj.filters
+++ b/RealmX Engine/RealmX Engine.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Header Files\Graphics">
       <UniqueIdentifier>{9b8c6207-ac72-4428-abc1-03ec939f8067}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Physics">
+      <UniqueIdentifier>{bf039cab-dbf5-4e0b-8ad3-2b48f2d2bb02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Transform">
+      <UniqueIdentifier>{e5259d3c-31b3-4819-bfb4-53c07fe9695c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="RealmX Engine.cpp">
@@ -43,6 +49,12 @@
     </ClInclude>
     <ClInclude Include="TextureManager.h">
       <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector2D.h">
+      <Filter>Header Files\Transform</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Header Files\Transform</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
